testfx/errors/error_tests/edge_36_unclosed.fx
// 未闭合的结构
x := 10
if (x > 5) {
    println("greater")
    if (x > 8) {
        println("much greater")
    
println("done")
